--- a/style.css
+++ b/style.css
@@ -1,124 +1,155 @@
-
-body{
-    background-color: #283747;
+body {
+  background-color: #283747;
 }
 
-#header-section{
-    display: flex;
-    margin-bottom: 150px;
+#header-section {
+  display: flex;
+  margin-bottom: 150px;
 }
-.header-div{
-    width: 50%;
-    
-}
-
-.header-div h1{
-    font-family: 'Dancing Script', cursive;
-    font-size: 60px;
-    color: rgb(236, 115, 68);
-    margin: 5px;
-    padding: 20px;
+.header-div {
+  width: 50%;
 }
 
-.header-div h3{
-
-    margin: 5px;
-    padding: 20px;
-    font-size: 28px;
-    color: rgba(209, 138, 6, 0.966);
-}
-.diff_fnt{
-    color: rgba(175, 172, 4, 0.945);
-    font-family: 'Dancing Script', cursive;
-    font-size: 40px;
+.header-div h1 {
+  font-family: "Dancing Script", cursive;
+  font-size: 50px;
+  color: rgb(236, 115, 68);
+  margin: 5px;
+  padding: 20px;
 }
 
-.header-div p{
-    font-family: 'Indie Flower', cursive;
-    color: rgb(245, 231, 205);
-    font-size: 28px;
-    margin: 5px;
-    padding: 20px;
+.header-div h3 {
+  font-family: "Lobster", cursive;
+  margin: 5px;
+  padding: 20px;
+  font-size: 25px;
+  font-weight: 200;
+  color: rgba(209, 138, 6, 0.966);
+}
+.diff_fnt {
+  color: rgba(175, 172, 4, 0.945);
+  font-family: "Dancing Script", cursive;
+  font-size: 40px;
 }
 
-.header-div a{
-    target: _blank;
-    text-decoration: none;
-    font-family: 'Indie Flower', cursive;
-    color: ;
-    font-weight: 700;
-    font-size: 20px;
-    margin: 20px;
-    padding: 10px;
-    border-radius: 30px;
-    background-image: linear-gradient(rgba(0, 255, 136, 0.925),rgba(0, 174, 255, 0.781));
+.header-div p {
+  font-family: "Indie Flower", cursive;
+  color: rgb(245, 231, 205);
+  font-size: 25px;
+  margin: 5px;
+  padding: 20px;
 }
 
-.header-div img{
-    height: 450px;
-    width: 450px;
-    border-radius: 250px;
-    float: right;
-    margin: 50px 250px 20px 10px;
-    
+.header-div a {
+  target: _blank;
+  text-decoration: none;
+  font-family: "Indie Flower", cursive;
+  color: ;
+  font-weight: 700;
+  font-size: 20px;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 30px;
+  background-image: linear-gradient(
+    rgba(0, 255, 136, 0.925),
+    rgba(0, 174, 255, 0.781)
+  );
 }
 
-
-.mid_div{
-    width: 50%;
+.header-div img {
+  height: 450px;
+  width: 450px;
+  border-radius: 250px;
+  float: right;
+  margin: 50px 250px 20px 10px;
 }
 
-#mid_sec{
-    display: flex;
-    background-image: url('/im/7.png');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    margin-bottom: 150px;
-    
+.mid_div {
+  width: 50%;
 }
 
-.mid_div img{
-    margin-left: 30px;
-    border-radius: 20px;
+#mid_sec {
+  display: flex;
+  background-image: url("/im/7.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  margin-bottom: 150px;
 }
 
-.mid_div p{
-    font-family: 'Indie Flower', cursive;
-    color: rgb(245, 231, 205);
-    font-size: 28px;
-    text-align: justify;
-    padding-right: 20px;
-    padding-left: 70px;
-    
+.mid_div img {
+  margin-left: 30px;
+  border-radius: 20px;
 }
 
-.mid_div a{
-    target: _blank;
-    text-decoration: none;
-    font-family: 'Indie Flower', cursive;
-    align-content: center;
-    margin-left: 90px;
-    font-weight: 700;
-    font-size: 20px;
-    border-radius: 20px;
-    padding: 10px;
-
-    background-image: linear-gradient(rgba(0, 255, 136, 0.925),rgba(0, 174, 255, 0.781));
-}
-.mid_div h1{
-    font-family: 'Dancing Script', cursive;
-    font-size: 60px;
-    color: rgb(236, 115, 68);
-    padding-top: 30px;
-    padding-left: 200px;
+.mid_div p {
+  font-family: "Indie Flower", cursive;
+  color: rgb(245, 231, 205);
+  font-size: 22px;
+  text-align: justify;
+  padding-right: 20px;
+  padding-left: 70px;
 }
 
+.mid_div a {
+  target: _blank;
+  text-decoration: none;
+  font-family: "Indie Flower", cursive;
+  align-content: center;
+  margin-left: 90px;
+  font-weight: 700;
+  font-size: 20px;
+  border-radius: 20px;
+  padding: 10px;
+
+  background-image: linear-gradient(
+    rgba(0, 255, 136, 0.925),
+    rgba(0, 174, 255, 0.781)
+  );
+}
+.mid_div h1 {
+  font-family: "Dancing Script", cursive;
+  font-size: 50px;
+  color: rgb(236, 115, 68);
+  padding-top: 30px;
+  padding-left: 200px;
+}
 
 #food_pic {
-    float: left;
-    width:  100px;
-    height: 100px;
-    object-fit: cover;
-    margin-left: 600px;
-    align-items: center;
+  float: left;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-left: 600px;
+  align-items: center;
+}
+
+.flexible-class {
+  display: flex;
+}
+.box {
+  width: 30%;
+  margin-bottom: 150px;
+  box-shadow: 10px 10px 30px rgb(19, 192, 140);
+  margin-left: 3%;
+  border-radius: 30px;
+}
+
+#box-img {
+  height: 80%;
+  width: 95%;
+  border-radius: 30px;
+  padding-left: 15px;
+  padding-top: 20px;
+}
+
+#box-h1 {
+  font-family: "Dancing Script", cursive;
+  color: rgb(236, 115, 68);
+  text-align: center;
+}
+#box-p {
+  font-family: "Indie Flower", cursive;
+  color: rgb(245, 231, 205);
+  font-size: 18px;
+  text-align: center;
 }
